cleanup code + changed order to iquotation for more generic chat beaviour

--- a/client-osiris/src/app/modules/main/components/default/default.component.html
+++ b/client-osiris/src/app/modules/main/components/default/default.component.html
@@ -5,3 +5,7 @@
 <div class="toast-container position-fixed top-0 end-0 p-3">
   <toast></toast>
 </div>
+<div class="custom-chat-wrapper gap-2">
+  TODO
+  <customer-order-chat></customer-order-chat>
+</div>
