--- a/client-osiris/src/app/modules/quotation/components/customer-order/customer-order.component.html
+++ b/client-osiris/src/app/modules/quotation/components/customer-order/customer-order.component.html
@@ -1,4 +1,4 @@
 <p>
   customer-order works!
 </p>
-<customer-order-chat *ngIf="customerOrder" [customerOrder]="customerOrder"></customer-order-chat>
+<customer-order-chat *ngIf="customerOrder" [iQuotationId]="customerOrder.id"></customer-order-chat>
