add mandatory phone number for webinars

--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -83,8 +83,8 @@
           </div>
           <div class="col-sm-6">
             <generic-input class="form-control form-control-lg" [(model)]="webinarParticipant.phoneNumber"
-              label="Téléphone" placeholder="Numéro de téléphone" [form]="webinarsForm" propertyName="phoneNumber"
-              [isMandatory]="false" [isDisabled]="false" [maxLength]="250" type="text"></generic-input>
+              label="Téléphone*" placeholder="Numéro de téléphone" [form]="webinarsForm" propertyName="phoneNumber"
+              [isMandatory]="true" [isDisabled]="false" [maxLength]="250" type="text"></generic-input>
           </div>
           <div class="col-12">
             <div class="form-check mb-4">
