--- a/client-myjss/src/app/modules/general/components/prices/prices.component.html
+++ b/client-myjss/src/app/modules/general/components/prices/prices.component.html
@@ -36,8 +36,8 @@
               [isDisabled]="false" [maxLength]="250" type="email"></generic-input>
           </div>
           <div class="col-sm-6">
-            <generic-input class="form-control form-control-lg" [(model)]="phoneNumber" label="Téléphone"
-              placeholder="Numéro de téléphone" [form]="pricesForm" propertyName="phoneNumber" [isMandatory]="false"
+            <generic-input class="form-control form-control-lg" [(model)]="phoneNumber" label="Téléphone*"
+              placeholder="Numéro de téléphone" [form]="pricesForm" propertyName="phoneNumber" [isMandatory]="true"
               [isDisabled]="false" [maxLength]="250" type="text"></generic-input>
           </div>
           <div class="col-12">
