--- a/src/main/resources/mails/mjml/header-publication-flag.mjml
+++ b/src/main/resources/mails/mjml/header-publication-flag.mjml
@@ -56,6 +56,7 @@
               style="
                 font-family: &quot;Roboto&quot;;
                 display: block;
+                white-space: normal;
                 word-wrap: break-word;
                 overflow-wrap: break-word;
               "
