fix HP block IDF remove 'Publié le' on posts

--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -199,7 +199,7 @@
                   </p>
                   <div class="post-meta">
                     <span class="date-info small">
-                      <span class="fs-9">Publié le {{post.date | literalDatePipe}}</span>
+                      <span class="fs-9">{{post.date | literalDatePipe}}</span>
                     </span>
                   </div>
                 </div>
