--- a/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
+++ b/client-myjss/src/app/modules/my-account/components/order-details/order-details.component.html
@@ -161,8 +161,15 @@
           </div>
           <div class="row d-flex justify-content-between align-items-center w-100">
             <div class="col-md-auto col order-md-2 order-2 " *ngIf="service.confrereLabel">
-              <div class="fs-sm text-body-secondary">Annonce publiée sur {{service.confrereLabel}}</div>
-              <!-- TODO : ajouter le lien vers le SPEL jss ou autre-->
+              <div class="fs-sm text-body-secondary">Annonce publiée sur {{service.confrereLabel}}
+                <span *ngIf="jssSpel && jssSpel.label && service.confrereLabel == jssSpel.label">
+                  (Consulter l'annonce sur
+                  <a class="text-decoration-none z-index-10 text-body-secondary"
+                    (click)="goToJssAnnouncement(service, $event )">
+                    JSS.fr
+                  </a>)
+                </span>
+              </div>
             </div>
           </div>
           <div class="row d-flex justify-content-between align-items-center w-100">
