added scroll to message when coming from unread comments + bugfixes + commented PDF download on mandatory-documents page

--- a/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
+++ b/client-myjss/src/app/modules/my-account/components/orders/orders.component.html
@@ -251,7 +251,7 @@
                           </p>
                         </div>
                         <button type="button" class="btn btn-link btn-sm px-2 mt-2 hover-bg-light "
-                          [routerLink]='"/account/orders/details/" + order.id'>
+                          [routerLink]='"/account/orders/details/" + order.id + (withUnreadCommmentsOnOrders ? "/with-unread":"")'>
                           <i class="ai-file-text me-2"></i>Détails de la commande
                         </button>
                         <button type="button" class="btn btn-link btn-sm px-2 mt-2 hover-bg-light "
