--- a/client-myjss/src/app/modules/tools/components/service-type-hub/service-type-hub.component.html
+++ b/client-myjss/src/app/modules/tools/components/service-type-hub/service-type-hub.component.html
@@ -27,12 +27,13 @@
       </div>
     </div>
     <div class="col-md-3 col-xl-3 offset-xl-1 d-flex justify-content-end">
-      <button type="button" class="ms-3 btn btn-outline-secondary btn-sm d-flex align-items-center "
+      <!-- TODO : When PDF will be available for download, uncomment
+       <button type="button" class="ms-3 btn btn-outline-secondary btn-sm d-flex align-items-center "
         *ngIf="serviceType && (serviceType.assoServiceTypeDocuments || serviceType.assoServiceTypeFieldTypes) "
         (click)="exportToPDF()" ngbTooltip="Télécharger le PDF" tooltipClass="custom-tooltip" placement="top">
         <i class="bi bi-download"></i>
         <span class="d-none d-lg-inline ms-1">Télécharger le PDF</span>
-      </button>
+      </button> -->
     </div>
   </div>
 </section>
