fix routerLink 'tags liés' in department-hub component

--- a/client-jss/src/app/main/components/department-hub/department-hub.component.html
+++ b/client-jss/src/app/main/components/department-hub/department-hub.component.html
@@ -131,7 +131,7 @@
                   <ul class="tag-cloud list-inline">
                     <li *ngFor="let tag of tagsByEntityType.slice(0,8)" class="list-inline-item pb-1">
                       <button class="btn bg-light text-secondary bg-hover-danger text-hover-white bg-hover-secondary
-                        text-hover-white" [routerLink]=' "/post/" + tag.slug'>{{tag.name}}</button>
+                        text-hover-white" [routerLink]=' "/post/tag/" + tag.slug'>{{tag.name}}</button>
                     </li>
                   </ul>
                 </div>
