add question textarea on webinar subscription form in myjss

--- a/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
+++ b/client-myjss/src/app/modules/tools/components/webinars/webinars.component.html
@@ -87,6 +87,12 @@
               [isMandatory]="true" [isDisabled]="false" [maxLength]="250" type="text"></generic-input>
           </div>
           <div class="col-12">
+            <generic-textarea class="form-control form-control-lg" [(model)]="webinarParticipant.question"
+              label="question" placeholder="Poser une question" [form]="webinarsForm" propertyName="question"
+              [isMandatory]="false" [isDisabled]="false" [maxLength]="500" [numberOfLines]="4"></generic-textarea>
+
+          </div>
+          <div class="col-12">
             <div class="form-check mb-4">
               <input class="form-check-input" type="checkbox" id="cgv" [(ngModel)]="isConditionAccepted"
                 name="isConditionAccepted" required>
