--- a/client-myjss/src/app/modules/miscellaneous/components/forms/select-myjss-category/select-myjss-category.component.html
+++ b/client-myjss/src/app/modules/miscellaneous/components/forms/select-myjss-category/select-myjss-category.component.html
@@ -1,4 +1,4 @@
-<div class="full-width row" [formGroup]="form!">
+<div class="full-width row align-items-center" [formGroup]="form!">
   <div class="select-wrapper pe-0">
     <label [for]="'fl-text'+uniqueId" *ngIf="isDisplayLabel && label && label.length > 0"
       class="form-label">{{label}}</label>
