--- a/client-myjss/src/assets/css/theme.css
+++ b/client-myjss/src/assets/css/theme.css
@@ -15770,6 +15770,18 @@ label {
   border-color: var(--ar-gray-700) !important;
 }
 
+/* if we dont want borders on the input, add disable-borders class to the input */
+.was-validated .disable-borders :valid:not(:required):not(.form-check-input):not(.btn),
+.is-valid:not(:required):not(.form-check-input):not(.btn) {
+  background: none;
+  border-color: transparent !important;
+}
+
+.was-validated .disable-borders :valid:not(:required):not(.form-check-input):not(.btn):focus,
+.is-valid:not(:required):not(.form-check-input):not(.btn):focus {
+  border-color: transparent !important;
+}
+
 .was-validated .input-group :valid:not(:required):not(.btn) {
   border-color: transparent !important;
 }
