--- a/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
+++ b/client-myjss/src/app/modules/tools/components/exclusives/exclusives.component.html
@@ -12,33 +12,31 @@
 </section>
 <section>
   <div class="jarallax overflow-hidden z-2 d-none d-md-block" data-speed="0.5">
-    <div class="jarallax-img"
-      style="background-image: url('assets/img/my-jss-tools/mandatory-documents-jarallax.jpg');"></div>
+    <div class="jarallax-img" style="background-image: url('assets/img/my-jss-tools/exclusives-jarallax.png');"></div>
   </div>
   <div class="d-block d-md-none">
-    <img src="assets/img/my-jss-tools/mandatory-documents-jarallax.jpg" />
+    <img src="assets/img/my-jss-tools/exclusives-jarallax.png" />
   </div>
 </section>
 
 <section class="container py-5" #exclusivitySection>
   <div class="row align-items-center gy-2 mb-4 pb-1 pb-sm-2 pb-lg-3">
-    <div class="col-lg-8">
+    <div class="col-lg-5">
       <h2 class="mb-lg-0">Nos exclus</h2>
     </div>
-    <div class="col-lg-4 col-sm-7">
-      <div class="input-group custom-input-group align-items-center py-0 rounded-1 row">
-        <div class="row align-items-center">
-          <generic-input style="flex-grow: 1;" [(model)]="searchText" label="Rechercher" [form]="exclusivePostsForm"
-            propertyName="secondSearchText" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false"
-            (onFormChange)="searchForPosts()" [icon]="'search'" class="btn-search col"></generic-input>
-          <div *ngIf="isLoading" class="col-1 d-flex spinner-border rounded-circle text-dark me-2" role="status">
-            <span class="visually-hidden">chargement...</span>
-          </div>
-          <button *ngIf="searchText" class="col-1 btn btn-link btn-search" (click)="clearSearch()">
-            <i class="ai ai-cross-alt"></i>
-          </button>
-        </div>
+    <div class="col-lg-7 col-sm-7">
+      <!-- Multiple inputs with addon on the right -->
+      <div class="input-group custom-input-group">
+        <generic-input [(model)]="searchText" label="Rechercher" [form]="exclusivePostsForm" [isDisableBorders]="true"
+          propertyName="secondSearchText" [isMandatory]="false" [isDisabled]="false" [isDisplayLabel]="false"
+          (onFormChange)="searchForPosts()" [icon]="'search'" class="btn-search col"></generic-input>
+        <span class="border-end border-input"></span>
+        <select-myjss-category class="cursor-pointer d-flex align-items-center"
+          [additionnalType]="this.myJssCategories[0]" [(model)]="selectedMyJssCategory" [form]="exclusivePostsForm"
+          propertyName="secondSelectedMyJssCategory" [isMandatory]="false" (onFormChange)="searchForPosts()"
+          [isDisabled]="false"></select-myjss-category>
       </div>
+
     </div>
   </div>
   <div class="accordion-item border-top mb-0" *ngIf="isLoading">
