--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.css
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.css
@@ -35,3 +35,20 @@
   color: var(--ar-gray-100);
   border: 1px solid #ccc;
 }
+
+:host ::ng-deep single-upload .download-card {
+  height: 150px !important;
+  padding: 10px !important;
+  min-height: auto !important;
+}
+
+:host ::ng-deep single-upload .download-card i {
+  font-size: 1.5rem !important;
+  margin-bottom: 5px !important;
+}
+
+:host ::ng-deep single-upload .download-card h6,
+:host ::ng-deep single-upload .download-card p {
+  font-size: 0.8rem !important;
+  margin-bottom: 2px !important;
+}
