--- a/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
+++ b/client-myjss/src/app/modules/quotation/components/required-information/required-information.component.html
@@ -169,7 +169,6 @@
                         [isDisabled]="false"></select-multiple-notice-type>
                     </div>
                   </div>
-
                   <div
                     *ngIf=" !provision.isRedactedByJss && (!noticeTemplateDescription || !noticeTemplateDescription.isUsingTemplate)"
                     class="col-12 pb-5">
@@ -177,6 +176,16 @@
                     <ckeditor id="announcementTextarea" [editor]="ckEditorHeader" [config]="config"
                       (ready)="onEditorReady($event, provision)" (change)="onNoticeChange($event, provision)">
                     </ckeditor>
+                  </div>
+
+                  <div
+                    *ngIf=" !provision.isRedactedByJss && (!noticeTemplateDescription || !noticeTemplateDescription.isUsingTemplate)"
+                    class="col-12 pb-5 compact-upload-container">
+                    <label class="form-label">Importer un fichier Word pour remplir le champ de texte de
+                      l'annonce</label>
+                    <single-upload [entity]="fileNoticeAnnouncement" [entityType]="PROVISION_ENTITY_TYPE.entityType"
+                      [attachmentType]="attachmentTypeApplicationCv" [isDirectUpload]="false" forcedFileExtension="DOCX"
+                      (fileDropped)="updateNoticeAnnouncement($event, provision)"></single-upload>
                   </div>
                 </div>
                 <div class="d-flex flex-column flex-md-row flex-sm-wrap align-items-start"
